Completed fixing about us modal being cut off Completed updating bundle

--- a/client/src/components/general/modal/modal.scss
+++ b/client/src/components/general/modal/modal.scss
@@ -54,23 +54,20 @@ figcaption h1 {
   //animation-fill-mode: forwards;
   -webkit-animation: scale-in-hor-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   animation: scale-in-hor-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
   transition: all 300ms ease;
   box-sizing: border-box;
   position: fixed;
   top: 25%;
-  //right: 3rem;
   width: 18rem;
-  //height: 35rem;
   background-color: #2c3e50;
   color: white;
   -webkit-transform: perspective(300px) rotateY(5deg);
   transform: perspective(300px) rotateY(5deg);
-  -webkit-transform-origin: middle right;
-  transform-origin: middle right;
+  //-webkit-transform-origin: middle right;
+  //transform-origin: middle right;
   -webkit-font-smoothing: antialiased;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
+  transform-origin: top right;
 }
 .tutorial-modal:after {
   content: '';
@@ -169,16 +166,19 @@ figcaption h1 {
   0% {
     -webkit-transform: translateZ(0) rotateY(0);
     transform: translateZ(0) rotateY(0);
+    transform-origin: top right;
     opacity: 1;
   }
   54% {
     -webkit-transform: translateZ(-160px) rotateY(87deg);
     transform: translateZ(-160px) rotateY(87deg);
+    transform-origin: top right;
     opacity: 1;
   }
   100% {
     -webkit-transform: translateZ(-800px) rotateY(90deg);
     transform: translateZ(-800px) rotateY(90deg);
+    transform-origin: top right;
     opacity: 0;
   }
 }
@@ -186,16 +186,19 @@ figcaption h1 {
   0% {
     -webkit-transform: translateZ(0) rotateY(0);
     transform: translateZ(0) rotateY(0);
+    transform-origin: top right;
     opacity: 1;
   }
   54% {
     -webkit-transform: translateZ(-160px) rotateY(87deg);
     transform: translateZ(-160px) rotateY(87deg);
+    transform-origin: top right;
     opacity: 1;
   }
   100% {
     -webkit-transform: translateZ(-800px) rotateY(90deg);
     transform: translateZ(-800px) rotateY(90deg);
+    transform-origin: top right;
     opacity: 0;
   }
 }
@@ -204,11 +207,13 @@ figcaption h1 {
   0% {
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
+    transform-origin: top right;
     opacity: 1;
   }
   100% {
     -webkit-transform: scaleX(1) perspective(300px) rotateY(5deg);
     transform: scaleX(1) perspective(300px) rotateY(5deg);
+    transform-origin: top right;
     opacity: 1;
   }
 }
@@ -216,11 +221,13 @@ figcaption h1 {
   0% {
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
+    transform-origin: top right;
     opacity: 1;
   }
   100% {
     -webkit-transform: scaleX(1) perspective(300px) rotateY(5deg);
     transform: scaleX(1) perspective(300px) rotateY(5deg);
+    transform-origin: top right;
     opacity: 1;
   }
 }
